--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ h1{
 }
 .orange-color{color: tomato;}
 
-section{display: flex;}
-
+section{display: flex;
+margin-bottom: 40px;}
 .half-width{width: 50%;
 padding-left: 2%;}
 
@@ -23,3 +23,7 @@ color: aqua;
 font-weight: 700;
 border-radius: 5px;}
 #top-bannar{background-image: url(images/my-bg.png);}
+
+.dream-big{background-image: url(image/dream-bg.png);
+background-repeat: no-repeat;
+background-position: right;}
