--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ h1{
 }
 .orange-color{color: tomato;}
 
-section{display: flex;
+.flexible-container{display: flex;
 margin-bottom: 40px;}
 .half-width{width: 50%;
 padding-left: 2%;}
