--- a/style.css
+++ b/style.css
@@ -1,29 +1,28 @@
-body{font-family: 'Poppins', sans-serif;
-}
-body{margin: 0;}
-h1{
-    font-size: 50px;
+body{
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
     
 }
-.orange-color{color: tomato;}
+h1{font-size: 50px;
+}
+.orange-color{color: red;}
 
-.flexible-container{display: flex;
-margin-bottom: 40px;}
+section{
+    display: flex;
+}
 .half-width{width: 50%;
-padding-left: 2%;}
+padding-left: 10px;}
 
 .half-width img{width: 80%;}
+.link-button{
+    text-decoration: none;
+    background-image:-o-linear-gradient(orange tomato);
+    background-color:  blueviolet;
+    padding: 10px 40p;
+    border-radius: 10px;
+}
+.top-bannar{
+   background-image:url(image/top-banner.png);
+   background-repeat: no-repeat;
+}
 
-.link-button
-{
-text-decoration: none;
-background-color: tomato;
-padding: 10px 40px;
-color: aqua;
-font-weight: 700;
-border-radius: 5px;}
-#top-bannar{background-image: url(images/my-bg.png);}
-
-.dream-big{background-image: url(image/dream-bg.png);
-background-repeat: no-repeat;
-background-position: right;}
