--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ h1{font-size: 50px;
 
 section{
     display: flex;
+    margin-bottom: 70px;
 }
 .half-width{width: 50%;
 padding-left: 10px;}
@@ -24,5 +25,11 @@ padding-left: 10px;}
 .top-bannar{
    background-image:url(image/top-banner.png);
    background-repeat: no-repeat;
+
+}
+.dream-big{
+    background-image: url(image/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
 
