--- a/style.css
+++ b/style.css
@@ -7,12 +7,15 @@ h1{font-size: 50px;
 }
 .orange-color{color: red;}
 
-section{
+.flexble-container{
     display: flex;
     margin-bottom: 70px;
 }
 .half-width{width: 50%;
-padding-left: 10px;}
+padding-left: 10px;
+box-shadow: 10px 10px ;
+}
+
 
 .half-width img{width: 80%;}
 .link-button{
@@ -32,4 +35,5 @@ padding-left: 10px;}
     background-repeat: no-repeat;
     background-position: right;
 }
+.tomato-color{color: red;}
 
